# snap

./: .dockerignore  Dockerfile  README-auth-service-update-phase2.md  README-auth-service.md  README.md  README.me  app.sh  backdeploy.sh  backend-folder-setup.sh  backend.sh  completescript  create_folder.sh  dash.sh  debug.sh  docker-compose.yaml  docker-compose.yml  docker.sh  folderbackend.sh  nginx.conf  setup-fine.sh  shell.sh
README/: README-auth-service-phase3.md  README-auth-service-update-phase2.md  README-phase4.md
backend/services/auth-service/: Dockerfile  pyproject.toml
backend/services/auth-service/app/: .env  main.py
backend/services/auth-service/app/api/: routes.py
backend/services/auth-service/app/models/: user.py
backend/services/auth-service/app/services/: auth.py  jwt_handler.py
backend/services/auth-service/app/utils/: config.py
backend/services/document-service/: Dockerfile  pyproject.toml  requirements.txt
backend/services/document-service/app/: .env  main.py  test_db.py
backend/services/document-service/app/api/: routes.py
backend/services/document-service/app/models/: document.py
backend/services/document-service/app/utils/: config.py  default_folder.py  file_handler.py
database/: Dockerfile  init.js  init.sql
frontend/: .dockerignore  Dockerfile  code_push.sh  deploy.sh  package.json  setup-fine.sh
public/: index.html
scripts/: deploy.sh  logs.sh  stop.sh
secure-docs-frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package.json
snap/: Dockerfile  package.json
snapdocs-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  code-push-backend.sh  docker-compose.yml  (+1 more)
src/: App.js  (+3 more)
(+155 files in other folders)
