[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "SnapDocs Auth Service"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.0"
pymongo = "^4.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.0"
email-validator = "^2.0.0"
httpx = "^0.28.0"
pydantic-settings = "^2.2.1"
